ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-ingress
  namespace: marketplace
spec:
  ingressClassName: nginx
  rules:
    - host: marketplace.svysk.com
      http:
        paths:
          - path: /ms-order
            pathType: Prefix
            backend:
              service:
                name: ms-order
                port:
                  name: http-order
          - path: /ms-delivery
            pathType: Prefix
            backend:
              service:
                name: ms-delivery
                port:
                  name: http-delivery
